--- a/Map_Geofencing/Assets/Base.lproj/Main.storyboard
+++ b/Map_Geofencing/Assets/Base.lproj/Main.storyboard
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="17B48" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="jxh-Uh-k3H">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="17B48" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="dzU-va-zGz">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -28,12 +29,110 @@
             </objects>
             <point key="canvasLocation" x="833" y="140"/>
         </scene>
+        <!--Table View Controller-->
+        <scene sceneID="uRc-TH-lpD">
+            <objects>
+                <viewController id="3P8-di-6yy" customClass="TableViewController" customModule="Map_Geofencing" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="sqQ-vk-LWf"/>
+                        <viewControllerLayoutGuide type="bottom" id="BU1-kV-f69"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="alF-e6-mfE">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="81" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="cZ8-O9-g27">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="plantCell" rowHeight="81" id="ZcG-l0-47a" customClass="TableViewCell" customModule="Map_Geofencing" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="81"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="ZcG-l0-47a" id="eDB-tx-YYk">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="80.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" translatesAutoresizingMaskIntoConstraints="NO" id="5PS-Nn-ZWt">
+                                                    <rect key="frame" x="10" y="16" width="355" height="50"/>
+                                                    <subviews>
+                                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="sample" translatesAutoresizingMaskIntoConstraints="NO" id="dXX-kF-8cy">
+                                                            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="height" constant="50" id="Ixs-df-sDA"/>
+                                                                <constraint firstAttribute="width" constant="50" id="rbW-7e-7qq"/>
+                                                            </constraints>
+                                                            <userDefinedRuntimeAttributes>
+                                                                <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
+                                                                <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                                                    <integer key="value" value="25"/>
+                                                                </userDefinedRuntimeAttribute>
+                                                            </userDefinedRuntimeAttributes>
+                                                        </imageView>
+                                                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" translatesAutoresizingMaskIntoConstraints="NO" id="fzS-bh-Esi">
+                                                            <rect key="frame" x="60" y="0.0" width="295" height="50"/>
+                                                            <subviews>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="749" text="Scientific Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zs0-vP-g7U">
+                                                                    <rect key="frame" x="0.0" y="0.0" width="295" height="25"/>
+                                                                    <fontDescription key="fontDescription" name="AvenirNextCondensed-DemiBold" family="Avenir Next Condensed" pointSize="17"/>
+                                                                    <nil key="textColor"/>
+                                                                    <nil key="highlightedColor"/>
+                                                                </label>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Common Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DXX-J5-Hpo">
+                                                                    <rect key="frame" x="0.0" y="25" width="295" height="25"/>
+                                                                    <fontDescription key="fontDescription" name="AvenirNextCondensed-Regular" family="Avenir Next Condensed" pointSize="17"/>
+                                                                    <color key="textColor" white="0.5" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                                                                    <nil key="highlightedColor"/>
+                                                                </label>
+                                                            </subviews>
+                                                        </stackView>
+                                                    </subviews>
+                                                    <constraints>
+                                                        <constraint firstItem="fzS-bh-Esi" firstAttribute="leading" secondItem="dXX-kF-8cy" secondAttribute="trailing" constant="10" id="Vg7-cP-vjE"/>
+                                                        <constraint firstItem="fzS-bh-Esi" firstAttribute="centerY" secondItem="5PS-Nn-ZWt" secondAttribute="centerY" id="eI6-Mo-qOg"/>
+                                                        <constraint firstItem="dXX-kF-8cy" firstAttribute="centerY" secondItem="5PS-Nn-ZWt" secondAttribute="centerY" id="khy-FW-rrJ"/>
+                                                    </constraints>
+                                                </stackView>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="5PS-Nn-ZWt" firstAttribute="centerY" secondItem="eDB-tx-YYk" secondAttribute="centerY" id="qII-kU-Xde"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <constraints>
+                                            <constraint firstItem="5PS-Nn-ZWt" firstAttribute="leading" secondItem="ZcG-l0-47a" secondAttribute="leading" constant="10" id="aPh-g6-KKm"/>
+                                            <constraint firstAttribute="trailing" secondItem="5PS-Nn-ZWt" secondAttribute="trailing" constant="10" id="dxH-o3-GMn"/>
+                                        </constraints>
+                                        <connections>
+                                            <outlet property="commonName" destination="DXX-J5-Hpo" id="Nqx-pE-bKR"/>
+                                            <outlet property="plantImageView" destination="dXX-kF-8cy" id="0Zt-2h-zBE"/>
+                                            <outlet property="scientificName" destination="zs0-vP-g7U" id="wCh-Yv-nmp"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="cZ8-O9-g27" firstAttribute="trailing" secondItem="alF-e6-mfE" secondAttribute="trailingMargin" constant="16" id="Ja7-P8-FaT"/>
+                            <constraint firstItem="cZ8-O9-g27" firstAttribute="leading" secondItem="alF-e6-mfE" secondAttribute="leadingMargin" constant="-16" id="M1S-BR-fAd"/>
+                            <constraint firstItem="BU1-kV-f69" firstAttribute="top" secondItem="cZ8-O9-g27" secondAttribute="bottom" id="PmB-tW-IsK"/>
+                            <constraint firstItem="cZ8-O9-g27" firstAttribute="top" secondItem="sqQ-vk-LWf" secondAttribute="bottom" constant="-64" id="k3u-Ju-VcF"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="WYh-CO-5CR"/>
+                    <connections>
+                        <outlet property="tableView" destination="cZ8-O9-g27" id="ukG-Bk-zv2"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="5h3-xq-A0B" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="832.79999999999995" y="837.93103448275872"/>
+        </scene>
         <!--Navigation Controller-->
         <scene sceneID="9x8-li-zIo">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="jxh-Uh-k3H" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="989-SV-7tx">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" id="989-SV-7tx">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
@@ -46,5 +145,26 @@
             </objects>
             <point key="canvasLocation" x="112.8" y="140.77961019490255"/>
         </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="vTB-BW-67Y">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="dzU-va-zGz" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" id="5sy-73-Jlw">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="3P8-di-6yy" kind="relationship" relationship="rootViewController" id="Izd-mE-K3D"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="rPL-eo-8X9" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="113" y="838"/>
+        </scene>
     </scenes>
+    <resources>
+        <image name="sample" width="650" height="574"/>
+    </resources>
 </document>
