--- a/Map_Geofencing/Assets/Base.lproj/Main.storyboard
+++ b/Map_Geofencing/Assets/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="17B48" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="gOc-dS-XLp">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="17B1003" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="gOc-dS-XLp">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -179,70 +179,48 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="129" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="ary-WT-Vdm">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="125" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="ary-WT-Vdm">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="favoriteCell" rowHeight="125" id="TfN-5d-oJx" customClass="FavoriteTableViewCell" customModule="Map_Geofencing" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="375" height="125"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="favoriteCell" rowHeight="120" id="TfN-5d-oJx" customClass="FavoriteTableViewCell" customModule="Map_Geofencing" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="120"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="TfN-5d-oJx" id="NpP-fV-uwt">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="124.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="119.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kO1-eT-Wml">
-                                                    <rect key="frame" x="18" y="13" width="339" height="99"/>
+                                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" translatesAutoresizingMaskIntoConstraints="NO" id="H6B-oq-QUh">
+                                                    <rect key="frame" x="126" y="39" width="122" height="40.5"/>
                                                     <subviews>
-                                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="sample" translatesAutoresizingMaskIntoConstraints="NO" id="7BU-DV-ZhZ">
-                                                            <rect key="frame" x="0.0" y="0.0" width="339" height="109"/>
-                                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                        </imageView>
-                                                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" translatesAutoresizingMaskIntoConstraints="NO" id="H6B-oq-QUh">
-                                                            <rect key="frame" x="12" y="12" width="122" height="40.5"/>
-                                                            <subviews>
-                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Scientific Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fPn-s4-ukT">
-                                                                    <rect key="frame" x="0.0" y="0.0" width="122" height="19.5"/>
-                                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
-                                                                    <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                                                    <nil key="highlightedColor"/>
-                                                                </label>
-                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Common Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cRM-lh-QBE">
-                                                                    <rect key="frame" x="0.0" y="20" width="122" height="20.5"/>
-                                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                                    <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                                                    <nil key="highlightedColor"/>
-                                                                </label>
-                                                            </subviews>
-                                                            <constraints>
-                                                                <constraint firstItem="cRM-lh-QBE" firstAttribute="top" secondItem="H6B-oq-QUh" secondAttribute="top" constant="20" symbolic="YES" id="6Uk-ME-1Xt"/>
-                                                            </constraints>
-                                                        </stackView>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Scientific Name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fPn-s4-ukT">
+                                                            <rect key="frame" x="0.0" y="0.0" width="122" height="19.5"/>
+                                                            <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Common Name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cRM-lh-QBE">
+                                                            <rect key="frame" x="0.0" y="20" width="122" height="20.5"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
                                                     </subviews>
                                                     <constraints>
-                                                        <constraint firstItem="H6B-oq-QUh" firstAttribute="leading" secondItem="kO1-eT-Wml" secondAttribute="leading" constant="12" id="c1D-8D-yaF"/>
-                                                        <constraint firstItem="H6B-oq-QUh" firstAttribute="top" secondItem="kO1-eT-Wml" secondAttribute="top" constant="12" id="kHf-ut-oB4"/>
+                                                        <constraint firstItem="cRM-lh-QBE" firstAttribute="top" secondItem="H6B-oq-QUh" secondAttribute="top" constant="20" symbolic="YES" id="6Uk-ME-1Xt"/>
                                                     </constraints>
-                                                    <userDefinedRuntimeAttributes>
-                                                        <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
-                                                            <integer key="value" value="10"/>
-                                                        </userDefinedRuntimeAttribute>
-                                                    </userDefinedRuntimeAttributes>
-                                                </view>
+                                                </stackView>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" alpha="0.5" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="sample" translatesAutoresizingMaskIntoConstraints="NO" id="7BU-DV-ZhZ">
+                                                    <rect key="frame" x="13" y="13" width="349" height="94"/>
+                                                </imageView>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="kO1-eT-Wml" firstAttribute="centerX" secondItem="NpP-fV-uwt" secondAttribute="centerX" id="1Qv-hC-nLs"/>
-                                                <constraint firstItem="kO1-eT-Wml" firstAttribute="leading" secondItem="NpP-fV-uwt" secondAttribute="leadingMargin" constant="10" id="1bX-Qz-69j"/>
-                                                <constraint firstAttribute="trailingMargin" secondItem="kO1-eT-Wml" secondAttribute="trailing" constant="10" id="CTf-Ok-HLG"/>
-                                                <constraint firstItem="kO1-eT-Wml" firstAttribute="leading" secondItem="NpP-fV-uwt" secondAttribute="leadingMargin" constant="10" id="Fyv-8g-Zml"/>
-                                                <constraint firstItem="kO1-eT-Wml" firstAttribute="top" secondItem="NpP-fV-uwt" secondAttribute="topMargin" constant="5" id="LMn-ht-93m"/>
-                                                <constraint firstItem="kO1-eT-Wml" firstAttribute="centerX" secondItem="NpP-fV-uwt" secondAttribute="centerX" id="O1Y-Oc-6lb"/>
-                                                <constraint firstItem="kO1-eT-Wml" firstAttribute="centerX" secondItem="NpP-fV-uwt" secondAttribute="centerX" id="Pge-zs-qYv"/>
-                                                <constraint firstItem="kO1-eT-Wml" firstAttribute="centerY" secondItem="NpP-fV-uwt" secondAttribute="centerY" id="WX7-Ad-ahs"/>
-                                                <constraint firstItem="kO1-eT-Wml" firstAttribute="top" secondItem="NpP-fV-uwt" secondAttribute="topMargin" constant="5" id="ZMG-tr-r0d"/>
-                                                <constraint firstAttribute="trailingMargin" secondItem="kO1-eT-Wml" secondAttribute="trailing" constant="10" id="eqH-lv-Luh"/>
-                                                <constraint firstItem="kO1-eT-Wml" firstAttribute="leading" secondItem="NpP-fV-uwt" secondAttribute="leadingMargin" constant="10" id="gTS-Lz-LS4"/>
-                                                <constraint firstAttribute="bottomMargin" secondItem="kO1-eT-Wml" secondAttribute="bottom" constant="5" id="ynh-cU-meW"/>
+                                                <constraint firstItem="H6B-oq-QUh" firstAttribute="centerX" secondItem="NpP-fV-uwt" secondAttribute="centerX" id="4n4-gu-Zp7"/>
+                                                <constraint firstItem="7BU-DV-ZhZ" firstAttribute="leading" secondItem="NpP-fV-uwt" secondAttribute="leadingMargin" constant="5" id="HO8-rD-CBo"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="7BU-DV-ZhZ" secondAttribute="trailing" constant="5" id="LB5-cF-twi"/>
+                                                <constraint firstItem="H6B-oq-QUh" firstAttribute="centerY" secondItem="NpP-fV-uwt" secondAttribute="centerY" id="RZL-1m-nrI"/>
+                                                <constraint firstItem="H6B-oq-QUh" firstAttribute="centerX" secondItem="7BU-DV-ZhZ" secondAttribute="centerX" id="fIZ-LS-WeJ"/>
+                                                <constraint firstItem="7BU-DV-ZhZ" firstAttribute="top" secondItem="NpP-fV-uwt" secondAttribute="topMargin" constant="5" id="jAi-mB-K0J"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="7BU-DV-ZhZ" secondAttribute="bottom" constant="5" id="pGU-HJ-rkm"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
