--- a/Map_Geofencing/Assets/Base.lproj/Main.storyboard
+++ b/Map_Geofencing/Assets/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="17B1003" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="dzU-va-zGz">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="17B1003" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="gOc-dS-XLp">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -227,6 +227,7 @@
                                             <outlet property="commonName" destination="cRM-lh-QBE" id="FqP-9J-8OX"/>
                                             <outlet property="plantImageView" destination="7BU-DV-ZhZ" id="aoD-Eb-YIz"/>
                                             <outlet property="scientificName" destination="fPn-s4-ukT" id="nOb-gi-O5R"/>
+                                            <segue destination="FXi-Kg-IJr" kind="show" identifier="showDetailView" id="mBg-Jl-DOb"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
@@ -695,4 +696,7 @@
     <resources>
         <image name="sample" width="650" height="574"/>
     </resources>
+    <inferredMetricsTieBreakers>
+        <segue reference="mBg-Jl-DOb"/>
+    </inferredMetricsTieBreakers>
 </document>
